@@ -1,5 +1,7 @@
 
 --- current version
+fixed error with rasterize when counting overlapping polygons with holes, reported by Boris Leroy. See:
+https://gis.stackexchange.com/questions/307770/inconsistencies-in-r-rasterize-polygons-packages-raster-and-sf
 fixed sf to sp coercion problem for degenerate Spatial*DataFrame with zero variables. Problem reported by Jakub Nowasad https://github.com/rspatial/raster/issues/29
 fixed SRTM download in getData (new URL) and uppercase issue reported by tatianic
 https://github.com/rspatial/raster/issues/34
